# DSA0135

./: CO4 Case Study.docx
Hospital (Mini Project)/SmartHospital/: CMakeLists.txt
Hospital (Mini Project)/SmartHospital/data/: emergency.txt  patients.txt  resources.txt
Hospital (Mini Project)/SmartHospital/docs/: Project_Report.md  README.md
Hospital (Mini Project)/SmartHospital/include/: emergency.h  hospital_base.h  patient.h  resource_manager.h  risk_analyzer.h  utility.h
Hospital (Mini Project)/SmartHospital/src/: emergency.cpp  hospital_base.cpp  main.cpp  patient.cpp  resource_manager.cpp  risk_analyzer.cpp  utility.cpp
smart timetable scheduler (Hackathon)/: CMakeLists.txt  CMakeSettings.json  README.md
smart timetable scheduler (Hackathon)/data/: admin.txt  batches.csv  faculty.csv  fixed_slots.csv  rooms.csv  subjects.csv
smart timetable scheduler (Hackathon)/src/: domain.cpp  domain.h  main.cpp  mainwindow.cpp  mainwindow.h  scheduler.cpp  scheduler.h  storage.cpp  storage.h
